# Skyrim-Content-Workbench

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
archive/: architecture.md  phase-1-handoff.md  progress.md  reference-conversation-p2.md  reference-conversation.md  spec.md
docs/: architecture.md  design-workbook.md  open-questions.md  phase-2-plan.md  product-review.md  progress.md  roadmap.md  spec.md  technical-debt.md
src/app/: __init__.py  app_paths.py  main.py  (+11 more)
tests/: conftest.py  test_app_paths.py  test_assembly_panel.py  test_assembly_service.py  test_content_service.py  test_content_unit_repository.py  test_content_unit_tag_repository.py  test_db.py  test_domain_models.py  test_file_asset_repository.py  test_file_classify.py  test_file_list_model.py  test_file_operation_service.py  test_file_scanner.py  test_folder_cache_repository.py  test_folder_node_repository.py  test_folder_tree_model.py  test_folder_tree_service.py  test_main_window.py  test_main_window_assembly.py  test_main_window_content.py  test_main_window_context_menu_task3.py  test_main_window_mode.py  test_main_window_quick_insert.py  test_main_window_scan_thread.py  test_main_window_staging.py  test_main_window_staging_list.py  test_managed_root_repository.py  test_managed_root_service.py  test_migrations.py  test_mod_assembly_service.py  test_mod_group_service.py  test_mod_item_repository.py  test_mode_manager.py  test_operation_log_repository.py  test_path_utils.py  test_pool_model.py  test_quick_insert_service.py  test_scan_service.py  test_scan_worker.py  (+11 more)
(+40 files in other folders)
