[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyrim-mod-workbench"
version = "0.1.0"
description = "Local-first Skyrim Mod 整理工作台"
requires-python = ">=3.12"
dependencies = [
    # PySide6 版本：文档未固定。下限 6.8 以保证所需控件；
    # 上限 <7 排除未来不兼容的主版本。Python 3.14 需要 PySide6 >=6.10。
    "PySide6>=6.8,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
skyrim-mod-workbench = "app.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
